move ViewModel reference to fragments, optimize change of data sets of RecyclerView

--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -6,9 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".activity.MovieListActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_movies"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager_movies"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout_movies"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </androidx.viewpager.widget.ViewPager>
 
 </LinearLayout>
