--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/text_view_title"
+                android:id="@+id/text_view_original_title"
                 android:textSize="14sp"
                 android:textStyle="italic"
                 android:textColor="@android:color/black"
