--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#D32F2F</color>
+    <color name="colorPrimaryDark">#a02121</color>
+    <color name="coloPrimaryLight">#FFCDD2</color>
+    <color name="colorAccent">#607D8B</color>
 </resources>
