--- a/app/src/main/res/layout/fragment_movie_pager.xml
+++ b/app/src/main/res/layout/fragment_movie_pager.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,8 +14,10 @@
             android:id="@+id/tab_layout_movies"
             android:elevation="12dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            app:tabTextColor="@color/colorPrimaryLight" />
 
     </androidx.viewpager.widget.ViewPager>
 
-</LinearLayout>
+</FrameLayout>
