--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#D32F2F</color>
     <color name="colorPrimaryDark">#a02121</color>
-    <color name="coloPrimaryLight">#FFCDD2</color>
+    <color name="colorPrimaryLight">#FFCDD2</color>
     <color name="colorAccent">#607D8B</color>
 </resources>
